[tool.poetry]
name = "invoicepy"
version = "0.1.0"
description = "invoicepy is a simple cli tool for generating and storing invoices."
documentation = "https://github.com/adamwojt/invoicepy/README.md"
authors = ["Adam W. <adam1edinburgh@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["invoicepy", "invoice", "cli", "python", "finance", "tools",]
repository = "https://github.com/adamwojt/invoicepy"
packages = [
    { include = "invoicepy", from = "src" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adamwojt/invoicepy/issues"
"Source" = "https://github.com/adamwojt/invoicepy"

[tool.poetry.dependencies]

python = "^3.6"
Click = "^7.0"
pydantic = {version = "^1.8.0",extras = ["email"]}
Jinja2 = "^3.0.0"
weasyprint = "^53.0"

[tool.poetry.extras]


[tool.poetry.dev-dependencies]
pip = "^19.2.3"
wheel = "^0.33.6"
pytest = "^4.6.5"
pytest-runner = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
[tool.poetry.plugins."console_scripts"]
"invoicepy" = "invoicepy.cli.main:cli"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]


[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "src"
